--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,4 +4,8 @@ version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
-dependencies = []
+dependencies = [
+    "mcp[cli]>=1.6.0",
+    "starlette>=0.46.1",
+    "uvicorn>=0.34.0",
+]
