--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,2 @@
-# Python-generated files
-__pycache__/
-*.py[oc]
-build/
-dist/
-wheels/
-*.egg-info
-
-# Virtual environments
-.venv
+.vercel
+node_modules
