--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,15 @@
 {
-  "rewrites": [{ "source": "/(.+)", "destination": "/api/server" }],
-  "functions": {
-    "api/server.ts": {
-      "maxDuration": 60
+  "version": 2,
+  "builds": [
+    {
+      "src": "api/*.py",
+      "use": "@vercel/python"
     }
-  }
+  ],
+  "routes": [
+    {
+      "src": "/(.*)",
+      "dest": "api/index.py"
+    }
+  ]
 }
